syntax = "proto3";

package api.user;

import "user.types.proto";

service UserService {
    rpc CreateUser (CreateUserReq) returns (UserRes) {
    }

    rpc UpdateUser (UpdateUserReq) returns (UserRes) {
    }

    rpc DeleteUser (UserReq) returns (UserRes) {
    }

    rpc VerifyUser (VerifyUserReq) returns (User) {
    }

    rpc GetUser (UserReq) returns (User) {
    }

    rpc GetUsersAll (Stub) returns (UsersRes) {
    }
}

message CreateUserReq {
    string name = 1;
    string email = 2;
    string password = 3;
    string avatar = 4;
}

message UpdateUserReq {
    string name = 1;
    string email = 2;
    string avatar = 3;
}

message VerifyUserReq {
    string email = 1;
    string password = 2;
}

message UserReq {
    string id = 1;
}

message UserRes {
    EStatus status = 1;
    string message = 2;
}

message UsersRes {
    repeated User users = 1;
}
